objects/QA_AccObj2__c.object
<CustomObject>
    <fields>
        <fullName>QaAcField1__c</fullName>
        <description>Add Comment for QaAcField1</description>
        <label>QaAcField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QaAccField3__c</fullName>
        <label>QaAccField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QaAccField4__c</fullName>
        <label>QaAccField4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QatestField2__c</fullName>
        <description>Add comment for QatestField2</description>
        <label>QatestField2</label>
        <type>Phone</type>
    </fields>
    <label>QA-AccObj2</label>
    <nameField>
        <label>QA-AccObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAAccObj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>